--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "sqlc-gen-json-wasm"
+name = "sqlc-gen-gleam-wasm"
 version = "0.1.0"
-authors = ["Kyle Conroy <kyle@conroy.org>"]
+authors = ["Shane Poppleton <shane@bjja.com.au>"]
 edition = "2018"
 
 [profile.release]
